--- a/examples/memory/lcel-based-memory.ipynb
+++ b/examples/memory/lcel-based-memory.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,11 +57,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "content='Hello Peter! How can I assist you today?'\n"
+     ]
+    }
+   ],
    "source": [
     "invoke_chain(\"My name is Peter\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "content='Your name is Peter.'\n"
+     ]
+    }
+   ],
+   "source": [
+    "invoke_chain(\"What is my name?\")"
    ]
   },
   {
@@ -69,9 +94,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "invoke_chain(\"What is my name?\")"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -81,8 +104,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.11.4"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
