feat : data loader and splitter
- learnng how to use data-loader and splitters

--- a/examples/rag/data-loader-and-splitters.ipynb
+++ b/examples/rag/data-loader-and-splitters.ipynb
@@ -2,10 +2,65 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Created a chunk of size 963, which is longer than the specified 600\n",
+      "Created a chunk of size 774, which is longer than the specified 600\n",
+      "Created a chunk of size 954, which is longer than the specified 600\n",
+      "Created a chunk of size 922, which is longer than the specified 600\n",
+      "Created a chunk of size 1168, which is longer than the specified 600\n",
+      "Created a chunk of size 821, which is longer than the specified 600\n",
+      "Created a chunk of size 700, which is longer than the specified 600\n",
+      "Created a chunk of size 745, which is longer than the specified 600\n",
+      "Created a chunk of size 735, which is longer than the specified 600\n",
+      "Created a chunk of size 1110, which is longer than the specified 600\n",
+      "Created a chunk of size 991, which is longer than the specified 600\n",
+      "Created a chunk of size 990, which is longer than the specified 600\n",
+      "Created a chunk of size 1182, which is longer than the specified 600\n",
+      "Created a chunk of size 1491, which is longer than the specified 600\n",
+      "Created a chunk of size 1401, which is longer than the specified 600\n",
+      "Created a chunk of size 1130, which is longer than the specified 600\n",
+      "Created a chunk of size 1326, which is longer than the specified 600\n",
+      "Created a chunk of size 1449, which is longer than the specified 600\n",
+      "Created a chunk of size 1364, which is longer than the specified 600\n",
+      "Created a chunk of size 999, which is longer than the specified 600\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Created a chunk of size 930, which is longer than the specified 600\n",
+      "Created a chunk of size 1022, which is longer than the specified 600\n",
+      "Created a chunk of size 1260, which is longer than the specified 600\n",
+      "Created a chunk of size 795, which is longer than the specified 600\n",
+      "Created a chunk of size 1293, which is longer than the specified 600\n",
+      "Created a chunk of size 649, which is longer than the specified 600\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "45"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "from langchain.chat_models import ChatOpenAI\n",
+    "#from langchain.document_loaders import TextLoader\n",
+    "#from langchain.document_loaders import PyPDFLoader\n",
+    "from langchain.document_loaders import UnstructuredFileLoader # UnstructuredFileLoader는 pdf, txt, docx를 다 열 수 있음\n",
+    "from langchain.text_splitter import RecursiveCharacterTextSplitter, CharacterTextSplitter\n",
+    "\n",
     "\"\"\"\n",
     " [Retrieval]\n",
     " Langchain의 모듈\n",
@@ -15,8 +70,34 @@
     " RAG의 첫번째 부분으로 데이터를 retrieving하는 프로세스는 다음과 같음\n",
     " Source 데이터 -> 데이터 Load -> 데이터 Transform -> 데이터 Embeding -> Store -> Retrieve\n",
     "\n",
-    "\"\"\""
+    "\"\"\"\n",
+    "\n",
+    "#loader = TextLoader(\"../../files/chapter_one.txt\")\n",
+    "#loader = PyPDFLoader(\"../../files/chapter_one.pdf\")\n",
+    "\n",
+    "# splitter = RecursiveCharacterTextSplitter(\n",
+    "#     chunk_size=200,\n",
+    "#     chunk_overlap=50  # 현재 chunk의 앞,뒤 부분을 조금씩 가져와서 overap시킴.\n",
+    "# ) # 문장 끝이나 문단의 끝부분마다 끊어줌\n",
+    "\n",
+    "splitter = CharacterTextSplitter(\n",
+    "    separator=\"\\n\",\n",
+    "    chunk_size=600,\n",
+    "    chunk_overlap=100\n",
+    ") # 특정 문자열을 기준으로 끊어줌\n",
+    "\n",
+    "loader = UnstructuredFileLoader(\"../../files/chapter_one.docx\")\n",
+    "\n",
+    "# loader.load()\n",
+    "loader.load_and_split(text_splitter=splitter)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -26,7 +107,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.11.6"
   }
  },
