--- a/examples/rag/map-reduce-lcel-chain.ipynb
+++ b/examples/rag/map-reduce-lcel-chain.ipynb
@@ -112,6 +112,7 @@
     "    return results\n",
     "\n",
     "# RunnableLambda는 chain과 그 내부 어디에서든 function을 호출할 수 있도록 해줌\n",
+    "# retriever는 Langchain에 의해 호출됨 : retriever(질문)과 같은 방식으로 자동 호출됨\n",
     "map_chain = {\"documents\" : retriever, \"question\":RunnablePassthrough()} | RunnableLambda(map_docs)\n",
     "\n",
     "\n",
