--- a/examples/assistant/assistant_example.ipynb
+++ b/examples/assistant/assistant_example.ipynb
@@ -2,16 +2,33 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "from langchain.utilities.duckduckgo_search import DuckDuckGoSearchAPIWrapper\n",
+    "import yfinance\n",
+    "import json\n",
     "\n",
     "def get_ticker(inputs):\n",
     "    ddg = DuckDuckGoSearchAPIWrapper()\n",
     "    company_name = inputs[\"company_name\"]\n",
     "    return ddg.run(f\"Ticker symbol of {company_name}\")\n",
+    "\n",
+    "def get_income_statement(inputs):\n",
+    "    ticker = inputs[\"ticker\"]\n",
+    "    stock = yfinance.Ticker(ticker)\n",
+    "    return json.dumps(stock.income_stmt.to_json())\n",
+    "\n",
+    "def get_balance_sheet(inputs):\n",
+    "    ticker = inputs[\"ticker\"]\n",
+    "    stock = yfinance.Ticker(ticker)\n",
+    "    return json.dumps(stock.balance_sheet.to_json())\n",
+    "\n",
+    "def get_daily_stock_performance(inputs):\n",
+    "    ticker = inputs[\"ticker\"]\n",
+    "    stock = yfinance.Ticker(ticker)\n",
+    "    return json.dumps(stock.history(period=\"3mo\").to_json())\n",
     "\n",
     "functions = [\n",
     "    {\n",
@@ -87,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,13 +117,6 @@
     "    tools=functions\n",
     ") # 2024.03.07 현재 assistant가 beta임"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
