--- a/examples/assistant/assistant_example.ipynb
+++ b/examples/assistant/assistant_example.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,19 +104,144 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "import openai as client\n",
     "\n",
-    "assistant = client.beta.assistants.create(\n",
-    "    name=\"Investor Assistant\",\n",
-    "    instructions=\"You help users do research on publicly traded companies and you help users decide if they should buy the stock or not.\",\n",
-    "    model=\"gpt-3.5-turbo-1106\",\n",
-    "    tools=functions\n",
-    ") # 2024.03.07 현재 assistant가 beta임"
+    "# 처음 assistant를 생성할때는 아래 코드를 이용하면됨\n",
+    "# assistant = client.beta.assistants.create(\n",
+    "#     name=\"Investor Assistant\",\n",
+    "#     instructions=\"You help users do research on publicly traded companies and you help users decide if they should buy the stock or not.\",\n",
+    "#     model=\"gpt-3.5-turbo-1106\",\n",
+    "#     tools=functions\n",
+    "# ) # 2024.03.07 현재 assistant가 beta임\n",
+    "\n",
+    "# 한번 생성한 assistant를 재사용할때는 id를 이용해서 사용가능\n",
+    "assistant_id=\"asst_xxxx\""
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Thread(id='thread_gw2ftEZtKbAxhdXtqAP12M71', created_at=1709850153, metadata={}, object='thread')"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# thread를 생성 (thread는 메시지의 그룹임). 생성한 thread는 run을 해야 llm에서 처리됨\n",
+    "thread = client.beta.threads.create(\n",
+    "    messages=[\n",
+    "        {\n",
+    "            \"role\":\"user\",\n",
+    "            \"content\":\"I want to know if the Salesforce stock is a good buy\"\n",
+    "        }\n",
+    "    ]\n",
+    ")\n",
+    "thread"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Run(id='run_Im9g8lwrJ2zDabWo8lBHlitZ', assistant_id='asst_NFosvvP0AuYbULHSiR6kuHsY', cancelled_at=None, completed_at=None, created_at=1709850158, expires_at=1709850758, failed_at=None, file_ids=[], instructions='You help users do research on publicly traded companies and you help users decide if they should buy the stock or not.', last_error=None, metadata={}, model='gpt-3.5-turbo-1106', object='thread.run', required_action=None, started_at=None, status='queued', thread_id='thread_gw2ftEZtKbAxhdXtqAP12M71', tools=[ToolAssistantToolsFunction(function=FunctionDefinition(name='get_ticker', description='Given the name of a company returns its ticker symbol', parameters={'type': 'object', 'properties': {'company_name': {'type': 'string', 'description': 'The name of the company'}}, 'required': ['company_name']}), type='function'), ToolAssistantToolsFunction(function=FunctionDefinition(name='get_income_statement', description=\"Given a ticker symbol (i.e AAPL) returns the company's income statement.\", parameters={'type': 'object', 'properties': {'ticker': {'type': 'string', 'description': 'Ticker symbol of the company'}}, 'required': ['ticker']}), type='function'), ToolAssistantToolsFunction(function=FunctionDefinition(name='get_balance_sheet', description=\"Given a ticker symbol (i.e AAPL) returns the company's balance sheet.\", parameters={'type': 'object', 'properties': {'ticker': {'type': 'string', 'description': 'Ticker symbol of the company'}}, 'required': ['ticker']}), type='function'), ToolAssistantToolsFunction(function=FunctionDefinition(name='get_daily_stock_performance', description='Given a ticker symbol (i.e AAPL) returns the performance of the stock for the last 100 days.', parameters={'type': 'object', 'properties': {'ticker': {'type': 'string', 'description': 'Ticker symbol of the company'}}, 'required': ['ticker']}), type='function')], usage=None)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# thread를 실행하기 위해 run을 생성\n",
+    "run = client.beta.threads.runs.create(\n",
+    "    thread_id=thread.id,\n",
+    "    assistant_id=assistant_id\n",
+    ")\n",
+    "run"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 현재(2024.3월) streaming이 지원되지 않으므로 run의 상태가 어떤지 알기 위해서 계속 물어봐야함\n",
+    "def get_run(run_id, thread_id):\n",
+    "    return client.beta.threads.runs.retrieve(\n",
+    "        run_id=run_id,\n",
+    "        thread_id=thread_id,\n",
+    "    )\n",
+    "\n",
+    "def get_messages(thread_id):\n",
+    "    messages = client.beta.threads.messages.list(\n",
+    "        thread_id=thread_id\n",
+    "    )\n",
+    "    messages = list(messages)\n",
+    "    messages.reverse()\n",
+    "    for message in messages:\n",
+    "        print(f\"{message.role}: {message.content[0].text.value}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'requires_action'"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_run(run.id, thread.id).status"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "user: I want to know if the Salesforce stock is a good buy\n"
+     ]
+    }
+   ],
+   "source": [
+    "get_messages(thread.id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
