--- a/examples/assistant/assistant_example.ipynb
+++ b/examples/assistant/assistant_example.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,6 +29,13 @@
     "    ticker = inputs[\"ticker\"]\n",
     "    stock = yfinance.Ticker(ticker)\n",
     "    return json.dumps(stock.history(period=\"3mo\").to_json())\n",
+    "\n",
+    "functions_map = {\n",
+    "    \"get_ticker\":get_ticker,\n",
+    "    \"get_income_statement\":get_income_statement,\n",
+    "    \"get_balance_sheet\":get_balance_sheet,\n",
+    "    \"get_daily_stock_performance\":get_daily_stock_performance\n",
+    "}\n",
     "\n",
     "functions = [\n",
     "    {\n",
@@ -104,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,25 +126,14 @@
     "# ) # 2024.03.07 현재 assistant가 beta임\n",
     "\n",
     "# 한번 생성한 assistant를 재사용할때는 id를 이용해서 사용가능\n",
-    "assistant_id=\"asst_xxxx\""
+    "assistant_id=\"asst_xxxxxxx\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Thread(id='thread_gw2ftEZtKbAxhdXtqAP12M71', created_at=1709850153, metadata={}, object='thread')"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# thread를 생성 (thread는 메시지의 그룹임). 생성한 thread는 run을 해야 llm에서 처리됨\n",
     "thread = client.beta.threads.create(\n",
@@ -153,20 +149,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Run(id='run_Im9g8lwrJ2zDabWo8lBHlitZ', assistant_id='asst_NFosvvP0AuYbULHSiR6kuHsY', cancelled_at=None, completed_at=None, created_at=1709850158, expires_at=1709850758, failed_at=None, file_ids=[], instructions='You help users do research on publicly traded companies and you help users decide if they should buy the stock or not.', last_error=None, metadata={}, model='gpt-3.5-turbo-1106', object='thread.run', required_action=None, started_at=None, status='queued', thread_id='thread_gw2ftEZtKbAxhdXtqAP12M71', tools=[ToolAssistantToolsFunction(function=FunctionDefinition(name='get_ticker', description='Given the name of a company returns its ticker symbol', parameters={'type': 'object', 'properties': {'company_name': {'type': 'string', 'description': 'The name of the company'}}, 'required': ['company_name']}), type='function'), ToolAssistantToolsFunction(function=FunctionDefinition(name='get_income_statement', description=\"Given a ticker symbol (i.e AAPL) returns the company's income statement.\", parameters={'type': 'object', 'properties': {'ticker': {'type': 'string', 'description': 'Ticker symbol of the company'}}, 'required': ['ticker']}), type='function'), ToolAssistantToolsFunction(function=FunctionDefinition(name='get_balance_sheet', description=\"Given a ticker symbol (i.e AAPL) returns the company's balance sheet.\", parameters={'type': 'object', 'properties': {'ticker': {'type': 'string', 'description': 'Ticker symbol of the company'}}, 'required': ['ticker']}), type='function'), ToolAssistantToolsFunction(function=FunctionDefinition(name='get_daily_stock_performance', description='Given a ticker symbol (i.e AAPL) returns the performance of the stock for the last 100 days.', parameters={'type': 'object', 'properties': {'ticker': {'type': 'string', 'description': 'Ticker symbol of the company'}}, 'required': ['ticker']}), type='function')], usage=None)"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# thread를 실행하기 위해 run을 생성\n",
     "run = client.beta.threads.runs.create(\n",
@@ -178,10 +163,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import json\n",
+    "\n",
     "# 현재(2024.3월) streaming이 지원되지 않으므로 run의 상태가 어떤지 알기 위해서 계속 물어봐야함\n",
     "def get_run(run_id, thread_id):\n",
     "    return client.beta.threads.runs.retrieve(\n",
@@ -196,12 +183,37 @@
     "    messages = list(messages)\n",
     "    messages.reverse()\n",
     "    for message in messages:\n",
-    "        print(f\"{message.role}: {message.content[0].text.value}\")"
+    "        print(f\"{message.role}: {message.content[0].text.value}\")\n",
+    "\n",
+    "def send_message(thread_id, content):\n",
+    "    return client.beta.threads.messages.create(\n",
+    "        thread_id=thread_id,\n",
+    "        role=\"user\",\n",
+    "        content=content\n",
+    "    )\n",
+    "\n",
+    "def cancel_run(run_id, thread_id):\n",
+    "    return client.beta.threads.runs.cancel(\n",
+    "        thread_id=thread_id,\n",
+    "        run_id=run_id\n",
+    "    )\n",
+    "\n",
+    "def delete_thread(thread_id):\n",
+    "    return client.beta.threads.delete(\n",
+    "        thread_id=thread_id\n",
+    "    )\n",
+    "\n",
+    "def submit_tool_outputs(run_id, thread_id):\n",
+    "    run = get_run(run_id, thread_id)\n",
+    "    for action in run.required_action.submit_tool_outputs.tool_calls:\n",
+    "        function = action.function\n",
+    "        # ai가 실행하라고 한 함수를 실행. 함수는 미리 functions_map에 담아놨음\n",
+    "        output = functions_map[function.name](json.loads(function.arguments))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +222,7 @@
        "'requires_action'"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,19 +233,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "user: I want to know if the Salesforce stock is a good buy\n"
+      "user: I want to know if the Salesforce stock is a good buy\n",
+      "user: Please go ahead\n"
      ]
     }
    ],
    "source": [
     "get_messages(thread.id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "send_message(thread.id, \"Please go ahead\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'NoneType' object has no attribute 'submit_tool_outputs'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[46], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43msubmit_tool_outputs\u001b[49m\u001b[43m(\u001b[49m\u001b[43mrun\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mid\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mthread\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mid\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[45], line 39\u001b[0m, in \u001b[0;36msubmit_tool_outputs\u001b[1;34m(run_id, thread_id)\u001b[0m\n\u001b[0;32m     37\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21msubmit_tool_outputs\u001b[39m(run_id, thread_id):\n\u001b[0;32m     38\u001b[0m     run \u001b[38;5;241m=\u001b[39m get_run(run_id, thread_id)\n\u001b[1;32m---> 39\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m action \u001b[38;5;129;01min\u001b[39;00m \u001b[43mrun\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrequired_action\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msubmit_tool_outputs\u001b[49m\u001b[38;5;241m.\u001b[39mtool_calls:\n\u001b[0;32m     40\u001b[0m         function \u001b[38;5;241m=\u001b[39m action\u001b[38;5;241m.\u001b[39mfunction\n\u001b[0;32m     41\u001b[0m         \u001b[38;5;66;03m# ai가 실행하라고 한 함수를 실행. 함수는 미리 functions_map에 담아놨음\u001b[39;00m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'submit_tool_outputs'"
+     ]
+    }
+   ],
+   "source": [
+    "submit_tool_outputs(run.id, thread.id)"
    ]
   },
   {
