--- a/examples/assistant/assistant_example.ipynb
+++ b/examples/assistant/assistant_example.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,26 +203,42 @@
     "        thread_id=thread_id\n",
     "    )\n",
     "\n",
-    "def submit_tool_outputs(run_id, thread_id):\n",
+    "def get_tool_outputs(run_id, thread_id):\n",
     "    run = get_run(run_id, thread_id)\n",
+    "    outputs = []\n",
     "    for action in run.required_action.submit_tool_outputs.tool_calls:\n",
+    "        action_id = action.id\n",
     "        function = action.function\n",
+    "        print(f\"Calling function: {function.name} with arg {function.arguments}\")\n",
     "        # ai가 실행하라고 한 함수를 실행. 함수는 미리 functions_map에 담아놨음\n",
-    "        output = functions_map[function.name](json.loads(function.arguments))"
+    "        outputs.append({\n",
+    "            \"output\": functions_map[function.name](json.loads(function.arguments)),\n",
+    "            \"tool_call_id\":action_id\n",
+    "        })\n",
+    "\n",
+    "    return outputs\n",
+    "\n",
+    "def submit_tool_outputs(run_id, thread_id):\n",
+    "    outputs = get_tool_outputs(run_id, thread_id)\n",
+    "    return client.beta.threads.runs.submit_tool_outputs(\n",
+    "        run_id = run_id,\n",
+    "        thread_id=thread_id,\n",
+    "        tool_outputs=outputs\n",
+    "    )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'requires_action'"
+       "'completed'"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -241,6 +257,24 @@
      "output_type": "stream",
      "text": [
       "user: I want to know if the Salesforce stock is a good buy\n",
+      "assistant: The ticker symbol for Salesforce is CRM. Here are some key financial metrics for Salesforce:\n",
+      "\n",
+      "- Net Income: $4.13 Billion\n",
+      "- Earnings Per Share (EPS): $4.25\n",
+      "- Total Revenue: $34.857 Billion\n",
+      "- Gross Profit: $26.316 Billion\n",
+      "- Operating Income: $5.999 Billion\n",
+      "- EBITDA: $9.958 Billion\n",
+      "\n",
+      "The stock performance for Salesforce over the last 100 days has been as follows:\n",
+      "\n",
+      "- Highest Stock Price: $318.71\n",
+      "- Lowest Stock Price: $249.84\n",
+      "- Current Stock Price: $306.00\n",
+      "\n",
+      "Based on this information, we can see that Salesforce has consistent profitability, a strong gross profit margin, and a healthy EBITDA. The stock price has also shown significant growth over the past 100 days.\n",
+      "\n",
+      "Given these positive indicators, Salesforce stock appears to be a good buy, but it's important to consider your investment strategy and consult with a financial advisor before making any investment decisions.\n",
       "user: Please go ahead\n"
      ]
     }
@@ -260,32 +294,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'NoneType' object has no attribute 'submit_tool_outputs'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[46], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43msubmit_tool_outputs\u001b[49m\u001b[43m(\u001b[49m\u001b[43mrun\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mid\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mthread\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mid\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[1;32mIn[45], line 39\u001b[0m, in \u001b[0;36msubmit_tool_outputs\u001b[1;34m(run_id, thread_id)\u001b[0m\n\u001b[0;32m     37\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21msubmit_tool_outputs\u001b[39m(run_id, thread_id):\n\u001b[0;32m     38\u001b[0m     run \u001b[38;5;241m=\u001b[39m get_run(run_id, thread_id)\n\u001b[1;32m---> 39\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m action \u001b[38;5;129;01min\u001b[39;00m \u001b[43mrun\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrequired_action\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msubmit_tool_outputs\u001b[49m\u001b[38;5;241m.\u001b[39mtool_calls:\n\u001b[0;32m     40\u001b[0m         function \u001b[38;5;241m=\u001b[39m action\u001b[38;5;241m.\u001b[39mfunction\n\u001b[0;32m     41\u001b[0m         \u001b[38;5;66;03m# ai가 실행하라고 한 함수를 실행. 함수는 미리 functions_map에 담아놨음\u001b[39;00m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'submit_tool_outputs'"
-     ]
-    }
-   ],
-   "source": [
-    "submit_tool_outputs(run.id, thread.id)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "submit_tool_outputs(run.id, thread.id)"
+   ]
   }
  ],
  "metadata": {
